infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: opus-casino
  labels:
    name: opus-casino
    istio-injection: enabled
